# J-arvis

./: .dockerignore  .gitignore  .golangci.yml  ARCHITECTURE.md  CHANGELOG.md  CONTEXT.md  Dockerfile.orchestrator  Makefile  Makefile.f10  PRODUCT.md  alembic.ini  e2e_server.go  e2e_server_http.go  go.mod  go.sum  gotchas.md  main.go  pyproject.toml  wails.json
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_hook_columns.py  0003_tasks_and_session_task_link.py  0004_repositories_and_cwd.py  0005_run_instances.py  0006_master_session.py
cmd/jarvis-e2e-http/: main.go
docs/adr/: 0001-sandbox-via-ai-jail-externo.md  0002-stack-do-daemon.md  0003-stack-da-ui.md  0004-tdd-iron-law-100-cobertura.md  0005-run-from-panel-manifesto-explicito.md  0006-db-descartavel-por-execucao.md  0007-task-first-em-vez-de-session-first.md  0008-sessao-em-terminal-nativo-do-desktop.md  0009-hooks-via-settings-no-jail.md  0010-websocket-canal-unico-envelope-tipado.md  0011-f3-cancelada-merged-into-f2.md  0012-task-como-entidade-primaria.md  0013-kanban-unificado-cross-project.md  0014-envelope-ws-task-id-opcional.md  0015-project-multi-repo-com-auto-detect.md  0016-multi-repo-1-sessao-cwd-shared.md  0017-worktree-detalhe-da-task-sem-create-ui.md  0018-run-instance-detalhe-da-task.md  0019-manifest-services-dict-com-depends-on.md  0020-bootstrap-via-sessao-claude-efemera.md  0021-catalog-yaml-curado-templates-perfis.md  0022-sessao-master-claude-no-sidebar-web.md  0023-tailwind-v4-shadcn-ui-stack.md  0024-cipher-design-system.md  0025-component-architecture-app-shell.md  README.md
docs/os-integration/: hotkey-binding.md  (+1 more)
orchestrator/: __init__.py  config.py  main.py
scripts/: README.md  f8-followups.sh  f8-merge.sh  f8-push.sh
tests/: conftest.py
ui/: components.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.setup.ts
(+483 files in other folders)
