[project]
name = "j-arvis"
version = "0.0.1"
description = "Local orchestrator for Claude Code sessions"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.11",
]
test-unit = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "coverage>=7",
]
test-integration = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "httpx>=0.27",
    "testcontainers>=4.8",
]
test-e2e = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "playwright>=1.48",
    "pytest-playwright>=0.5",
    "testcontainers>=4.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orchestrator"]

[tool.pytest.ini_options]
addopts = "--strict-markers -ra"
markers = [
    "unit: pure unit tests, no I/O",
    "integration: route-level tests with real FastAPI app",
    "e2e: end-to-end tests with Playwright + testcontainers",
]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["orchestrator"]
branch = true
concurrency = ["thread", "greenlet"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "pragma: no cover",
    "\\.\\.\\.\\s*$",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "RUF", "SIM", "PL"]
ignore = ["PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "S101"]

[tool.mypy]
python_version = "3.13"
strict = true
exclude = ["^\\.venv/", "^ui/"]
